# agribot_ur5

./: LICENSE  README.md
controller_ur5/install/: local_setup.sh  setup.sh
controller_ur5/install/pymoveit2/lib/pymoveit2/: ex_collision_object.py  ex_joint_goal.py  ex_pose_goal.py  ex_servo.py
controller_ur5/install/pymoveit2/share/pymoveit2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
controller_ur5/log/: latest_build
controller_ur5/src/detection_realsence/: package.xml  setup.cfg  setup.py
controller_ur5/src/detection_realsence/detection_realsence/: shapes_cv_image.py
real_ur5/install/: local_setup.sh  setup.sh
real_ur5/install/ur/share/ur/: local_setup.sh  package.sh
real_ur5/install/ur_bringup/share/ur_bringup/: package.sh
real_ur5/install/ur_calibration/lib/ur_calibration/: calibration_correction
real_ur5/install/ur_calibration/share/ur_calibration/: local_setup.sh  package.sh
real_ur5/log/: latest_build
sim_ur5/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
sim_ur5/log/: latest_build
sim_ur5/src/ur5_moveit/: .setup_assistant
sim_ur5/src/ur5_moveit/config/: ur5.srdf
sim_ur5/src/ur5_moveit/launch/: ur5_rviz_gazebo.launch.py
sim_ur5/src/ur_description/: CMakeLists.txt
sim_ur5/src/ur_description/launch/: start_ur_world_launch.py  ur5_gazebo_launch.py
sim_ur5/src/ur_description/urdf/: ur5_arm.urdf.xacro
sim_ur5/src/ur_description/worlds/: ur5_sim_gazego.world
(+358 files in other folders)
